--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -104,6 +104,7 @@
             <option value="available">Disponible</option>
         </select>
         <input type="text" placeholder="Buscar productos...">
+        <button onclick="location.href='/api/carts'">Visitar Carritos</button>
         <button onclick="location.href='/profile'">Visitar Perfil</button>
     </div>
     
