--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -79,7 +79,7 @@
     <h1>BIENVENID@ A NUESTRA TIENDA</h1>
     <h2>Registro</h2>
     
-    <form action="/profile" method="POST">
+    <form action="/api/sessions/register" method="POST">
         <label for="first_name">Nombre:</label>
         <input type="text" name="first_name" required>
         <label for="last_name">Apellido:</label>
