ordenamos, simplificamos codigo y agrego .env info

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -185,7 +185,7 @@
             {{else}}
                 <p>No hay carritos disponibles.</p>
             {{/if}}
-            <button id="crearCartButton">Crear Carrito</button>
+            <button id="crearCartButton" onclick="crearCart('')">Crear Carrito</button>
         </ul>
     </div>
 
